--- a/index.html
+++ b/index.html
@@ -27,13 +27,19 @@
     </style>
   </head>
   <body>
+    <!-- <div class="component-preview">
+      <button type="button" class="btn-outlined-primary rounded">
+        Elementary
+      </button>
+      <button type="button" class="btn-filled-secondary">Elementary</button>
+    </div> -->
     <span class="sr-only" id="polite-live-announcer" aria-live="polite"></span>
     <span
       class="sr-only"
       id="assertive-live-announcer"
       aria-live="assertive"
     ></span>
-    <div>
+    <div class="w-[90vw] max-w-[1100px] mx-auto">
       <nav id="primary-nav" aria-label="primary navigation">
         <ul>
           <li><a href="#about">About</a></li>
@@ -44,8 +50,7 @@
       </nav>
       <header></header>
       <main>
-        <section id="home">
-        </section>
+        <section id="home"></section>
         <section id="about">
           <h2>About me</h2>
           <p>
@@ -74,59 +79,67 @@
           <header>
             <h2></h2>
           </header>
-          <div>
+          <div class="grid gap-10 grid-cols-[30%_1fr]">
             <section social-handles>
               <h3 class="sr-only">Social Media Handles</h3>
-              <div>
-                <div>
-                  <div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="currentColor"
-                    >
-                      <path
-                        d="M3 3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3ZM20 7.23792L12.0718 14.338L4 7.21594V19H20V7.23792ZM4.51146 5L12.0619 11.662L19.501 5H4.51146Z"
-                      ></path>
-                    </svg>
-                  </div>
-                  <p>
-                    <span>Email</span
-                    ><a
-                      href="mailto:emmanuel.fosuduffour@gmail.com"
-                      aria-label="Mail me"
-                      >emmanuel.fosuduffour@gmail.com</a
-                    >
-                  </p>
-                </div>
-                <div>
-                  <div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="currentColor"
-                    >
-                      <path
-                        d="M12 23.7279L5.63604 17.364C2.12132 13.8492 2.12132 8.15076 5.63604 4.63604C9.15076 1.12132 14.8492 1.12132 18.364 4.63604C21.8787 8.15076 21.8787 13.8492 18.364 17.364L12 23.7279ZM16.9497 15.9497C19.6834 13.2161 19.6834 8.78392 16.9497 6.05025C14.2161 3.31658 9.78392 3.31658 7.05025 6.05025C4.31658 8.78392 4.31658 13.2161 7.05025 15.9497L12 20.8995L16.9497 15.9497ZM12 13C10.8954 13 10 12.1046 10 11C10 9.89543 10.8954 9 12 9C13.1046 9 14 9.89543 14 11C14 12.1046 13.1046 13 12 13Z"
-                      ></path>
-                    </svg>
-                  </div>
-                  <p>
-                    <span>Location</span>
-                    <a
-                      href="https://www.google.com/maps?q=Accra+Ghana"
-                      target="_blank"
-                      rel="noopener"
-                    >
-                      Accra, Ghana
-                    </a>
-                  </p>
-                </div>
-              </div>
-              <div>
-                <p>Connect with me</p>
+              <div class="grid gap-6">
                 <div>
                   <a
+                    href="mailto:emmanuel.fosuduffour@gmail.com"
+                    aria-label="Mail me"
+                    class="flex gap-3 items-start"
+                  >
+                    <div class="ic-filled-primary rounded bp-s-1">
+                      <svg
+                        class="icon-sm"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24"
+                        fill="currentColor"
+                      >
+                        <path
+                          d="M3 3H21C21.5523 3 22 3.44772 22 4V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V4C2 3.44772 2.44772 3 3 3ZM20 7.23792L12.0718 14.338L4 7.21594V19H20V7.23792ZM4.51146 5L12.0619 11.662L19.501 5H4.51146Z"
+                        ></path>
+                      </svg>
+                    </div>
+                    <p class="grid">
+                      <span>Email</span>
+                      <span class="text-sm-2"
+                        >emmanuel.fosuduffour@gmail.com</span
+                      >
+                    </p>
+                  </a>
+                </div>
+                <div>
+                  <a
+                    href="https://www.google.com/maps?q=Accra+Ghana"
+                    target="_blank"
+                    rel="noopener"
+                    class="flex gap-3 items-start"
+                  >
+                    <div class="ic-filled-primary rounded bp-s-1">
+                      <svg
+                        class="icon-sm"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24"
+                        fill="currentColor"
+                      >
+                        <path
+                          d="M12 23.7279L5.63604 17.364C2.12132 13.8492 2.12132 8.15076 5.63604 4.63604C9.15076 1.12132 14.8492 1.12132 18.364 4.63604C21.8787 8.15076 21.8787 13.8492 18.364 17.364L12 23.7279ZM16.9497 15.9497C19.6834 13.2161 19.6834 8.78392 16.9497 6.05025C14.2161 3.31658 9.78392 3.31658 7.05025 6.05025C4.31658 8.78392 4.31658 13.2161 7.05025 15.9497L12 20.8995L16.9497 15.9497ZM12 13C10.8954 13 10 12.1046 10 11C10 9.89543 10.8954 9 12 9C13.1046 9 14 9.89543 14 11C14 12.1046 13.1046 13 12 13Z"
+                        ></path>
+                      </svg>
+                    </div>
+                    <p class="grid">
+                      <span>Location</span>
+                      <span class="text-sm-2">Accra, Ghana</span>
+                    </p>
+                  </a>
+                </div>
+              </div>
+              <div class="mt-10">
+                <p>Connect with me</p>
+                <div class="flex gap-4 mt-2">
+                  <a
+                    class="btn-outlined-secondary rounded bp-s-1"
                     href="https://x.com/emman_fosu"
                     target="_blank"
                     rel="noopener"
@@ -134,6 +147,7 @@
                   >
                     <div>
                       <svg
+                        class="icon-sm"
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 24 24"
                         fill="currentColor"
@@ -145,6 +159,7 @@
                     </div>
                   </a>
                   <a
+                    class="btn-outlined-secondary rounded bp-s-1"
                     href="https://www.linkedin.com/in/emma-fosu"
                     target="_blank"
                     rel="noopener"
@@ -152,6 +167,7 @@
                   >
                     <div>
                       <svg
+                        class="icon-sm"
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 24 24"
                         fill="currentColor"
@@ -167,9 +183,11 @@
                     target="_blank"
                     rel="noopener"
                     aria-label="GitHub"
+                    class="btn-outlined-secondary rounded bp-s-1"
                   >
                     <div>
                       <svg
+                        class="icon-sm"
                         xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 24 24"
                         fill="currentColor"
@@ -185,52 +203,67 @@
             </section>
             <section contact-form>
               <h3 class="sr-only">Contact Form</h3>
-              <form novalidate>
-                <div>
+              <form novalidate class="grid gap-x-4 gap-y-5 grid-cols-[1fr_1fr] container-1">
+                <div class="grid gap-1.5">
                   <label for="name">Name</label>
-                  <input
-                    type="text"
-                    name="name"
-                    id="name"
-                    placeholder="Enter your name"
-                    required
-                  />
-                  <span id="name-error"></span>
+                  <div>
+                    <input
+                      class="w-full"
+                      type="text"
+                      name="name"
+                      id="name"
+                      placeholder="Enter your name"
+                      required
+                    />
+                    <div id="name-error"></div>
+                  </div>
                 </div>
-                <div>
+                <div class="grid gap-1.5">
                   <label for="email">Email</label>
-                  <input
-                    type="text"
-                    name="email"
-                    id="email"
-                    placeholder="Enter your email"
-                    required
-                  />
-                  <span id="email-error"></span>
+                  <div>
+                    <input
+                      class="w-full"
+                      type="text"
+                      name="email"
+                      id="email"
+                      placeholder="Enter your email"
+                      required
+                      pattern="^[A-Za-z0-9._%+\-]+@[A-Za-z0-9.\-]+\.[A-Za-z]{2,}$"
+                    />
+                    <div id="email-error"></div>
+                  </div>
                 </div>
-                <div>
+                <div class="col-span-full grid gap-1.5">
                   <label for="subject">Subject</label>
                   <input
                     type="text"
                     name="subject"
                     id="subject"
                     placeholder="Enter your subject"
+                    class="w-full"
                   />
                 </div>
-                <div>
+                <div class="col-span-full grid gap-1.5">
                   <label for="message">Message</label>
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Type here..."
-                    required
-                  ></textarea>
-                  <span id="message-error"></span>
+                  <div>
+                    <textarea
+                      class="w-full"
+                      name="message"
+                      id="message"
+                      rows="7"
+                      placeholder="Type here..."
+                      required
+                    ></textarea>
+                    <div id="message-error"></div>
+                  </div>
                 </div>
-                <button type="submit">
-                  <!-- send svg here -->
-                  <span>
+                <button
+                  type="submit"
+                  class="btn-outlined-secondary bp-r-1 w-fit"
+                >
+                  <span class="flex items-center gap-[6px]">
                     <svg
+                      class="icon-sm"
                       xmlns="http://www.w3.org/2000/svg"
                       viewBox="0 0 24 24"
                       fill="currentColor"
